--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ html, body {
   margin: 0;
   height: 100%;
   background-color: #000000;
+	max-width: 100%;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 body {
